Crash when muting node group #106982

Closed
opened 2023-04-15 11:40:21 +02:00 by RT · 6 comments

System Information
Operating system: Linux-5.15.0-69-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: Mesa DRI Intel(R) HD Graphics 4600 (HSW GT2) Intel Open Source Technology Center 4.5 (Core Profile) Mesa 21.2.6

Blender Version
Broken: version: 3.5.0, branch: blender-v3.5-release, commit date: 2023-03-29 02:56, hash: 1be25cfff18b

Short description of error
Crash when muting node group

Exact steps for others to reproduce the error

  1. Open file

  2. Mute node group (see image / animated gif or mkv file)
    Node group to mute to show crash.png

  3. Crash when muting node group

**System Information** Operating system: Linux-5.15.0-69-generic-x86_64-with-glibc2.31 64 Bits Graphics card: Mesa DRI Intel(R) HD Graphics 4600 (HSW GT2) Intel Open Source Technology Center 4.5 (Core Profile) Mesa 21.2.6 **Blender Version** Broken: version: 3.5.0, branch: blender-v3.5-release, commit date: 2023-03-29 02:56, hash: `1be25cfff18b` **Short description of error** Crash when muting node group **Exact steps for others to reproduce the error** 1) Open file 2) Mute node group (see image / animated gif or mkv file) ![Node group to mute to show crash.png](/attachments/518b664d-febc-4ae2-8089-f0abb1267bf9) 3) Crash when muting node group
RT added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-04-15 11:40:21 +02:00

Something very old, in debugging i can make an example file from just 2 nodes. I'll try to find the reason.

Something very old, in debugging i can make an example file from just 2 nodes. I'll try to find the reason.

Hi @JacquesLucke, seems there is some bug in indexing graph output usage data?
This is the modifier node group + nested node group.

top one nested one
graph 1.txt.3.png graph 1.txt.png

Notice the attempt to use the field value in the nested group when it is marked as not used in the top group. The same applies to the resulting geometry. The modifier is probably waiting for it to be calculated. But I see that its usage everywhere is marked as 0?

Crashes in debug. It seems to me to be a more simplified version of this report. But it might be an unrelated issue. At least they are both related to usage data.

Hi @JacquesLucke, seems there is some bug in indexing graph output usage data? This is the modifier node group + nested node group. | top one | nested one | | -- | -- | | ![graph 1.txt.3.png](/attachments/93c0d616-e5ed-4aef-82cb-c603397fd996) | ![graph 1.txt.png](/attachments/1ecf3a54-e06d-42d9-9571-9ba62224f529) | Notice the attempt to use the field value in the nested group when it is marked as not used in the top group. The same applies to the resulting geometry. The modifier is probably waiting for it to be calculated. But I see that its usage everywhere is marked as 0? Crashes in debug. It seems to me to be a more simplified version of this report. But it might be an unrelated issue. At least they are both related to usage data.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-04-17 10:59:24 +02:00
Member

@mod_moder the static detection of unused sockets worked correctly. The "Top" output is actually not required in the node tree when the node is muted. The issue was in LazyFunctionForMutedNode.

@mod_moder the static detection of unused sockets worked correctly. The "Top" output is actually not required in the node tree when the node is muted. The issue was in `LazyFunctionForMutedNode`.
Member

@JacquesLucke hi, can we backport this to 3.5?

@JacquesLucke hi, can we backport this to 3.5?
Member

yes

yes
Member

Thanks, added.

Thanks, added.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#106982
No description provided.