Fix #106982: crash with muted node

The lazy function for muted nodes did request inputs
even if they were not required.